[add] 完璧に自動翻訳

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,7 +15,7 @@
       <tr>
         <td><%= post.created_at.in_time_zone('Tokyo') %></td>
         <td><%= post.user_name %></td>
-        <td><%= post.content %></td>
+        <td><%= translate_timeline(post.content) %></td>
         <td><%= link_to 'Show', post %></td>
       </tr>
     <% end %>
