--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,8 +2,8 @@
 
 <p>
   <strong>Content:</strong>
-  <%= @post.content %>
 <p>名前:<%= @post.user_name %></p>
+  <%= translate_timeline(@post.content) %>
 </p>
 
 <%= link_to 'Back', posts_path %>
