--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,6 +11,7 @@
   </thead>
 
   <tbody>
+  <% if signed_in? %>
     <% @posts.each do |post| %>
       <tr>
         <td><%= post.created_at.in_time_zone('Tokyo') %></td>
@@ -18,6 +19,16 @@
         <td><%= translate_timeline(post.content) %></td>
         <td><%= link_to 'Show', post %></td>
       </tr>
+    <% end %>
+    <% else %>
+    <% @posts.each do |post| %>
+      <tr>
+        <td><%= post.created_at.in_time_zone('Tokyo') %></td>
+        <td><%= post.user_name %></td>
+        <td><%= post.content %></td>
+        <td><%= link_to 'Show', post %></td>
+      </tr>
+    <% end %>
     <% end %>
   </tbody>
 </table>
