--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New Post</h1>
+<%= render partial: 'shared/header', locals: { current: 'timeline' } %>
+<main class="inner">
+  <div id="form">
 
-<%= render 'form', post: @post %>
+    <%= render 'form', post: @post %>
 
-<%= link_to 'Back', posts_path %>
+    <%= link_to 'Back', posts_path, :class =>'btn' %>
+
+  </div>
+</main>
+<%= render partial: 'shared/footer' %>
